test/expected/explain_f_typedef_ai.out
explain A f()
        ^
9: error: function returning array; did you mean function returning pointer?
